[gd_scene format=3 uid="uid://bpeq83vrwjnde"]

[ext_resource type="Script" uid="uid://dy6l5b0wfyedg" path="res://scripts/operators/mini_game/mask_game.gd" id="1_m5j40"]
[ext_resource type="Shader" uid="uid://db7il62vfsuqa" path="res://scripts/shaders/paint_area.gdshader" id="2_wlxgu"]
[ext_resource type="Script" uid="uid://bnvhb2orwtida" path="res://scripts/components/mini_game/paint_area.gd" id="3_uehh4"]
[ext_resource type="AudioStream" uid="uid://s4g7shu475br" path="res://assets/sounds/sfx/sfx_apply_mask.ogg" id="4_jyg7e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ul4w3"]
shader = ExtResource("2_wlxgu")

[node name="MaskGame" type="Node2D" unique_id=1945729470]
script = ExtResource("1_m5j40")
pourcentage_needed = 0.75

[node name="PaintArea" type="Sprite2D" parent="." unique_id=1704629239]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ul4w3")
script = ExtResource("3_uehh4")
brush_color = Color(0, 0, 0, 0)
brush_size = 15

[node name="SfxMask" type="AudioStreamPlayer2D" parent="." unique_id=134941850]
stream = ExtResource("4_jyg7e")

[connection signal="press_brush" from="PaintArea" to="." method="_on_paint_area_press_brush"]
[connection signal="release_brush" from="PaintArea" to="." method="_on_paint_area_release_brush"]
